added registration, every endpoint can be reached by everyone even if he is not logged